--- a/Dynamic/src/App.css
+++ b/Dynamic/src/App.css
@@ -1,42 +1,37 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+body {
+	align-items: center;
+	color: white;
+	cursor: pointer;
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+	font-family: "Press Start 2P", monospaced;
+	font-size: 50px;
+	background-color: black;
+	width: 100%;
+	height: 100%;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.image {
+	width: 800px;
+	margin-left: 50%;
+	margin-top: -200px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header {
+	margin-left: 20%;
+	position: absolute;
+	margin-top: 400px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.textFlex {
+	font-size: 17px;
+	width: auto;
+	margin: 100px;
+	display: flex;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 100;
+	justify-content: space-around;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.textFlex h2 {
+	/* margin: 70px; */
+	width: 600px;
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+h2.right {
+	margin-top: 300px;
 }
