--- a/Dynamic/src/App.css
+++ b/Dynamic/src/App.css
@@ -26,16 +26,51 @@ body {
 	justify-content: space-around;
 }
 .textFlex h2 {
-	/* margin: 70px; */
 	width: 600px;
 }
 h2.right {
 	margin-top: 300px;
 }
-.parallax {
+/* .parallax {
 	margin-top: 60%;
-}
+	position: relative;
+} */
 
 .img {
 	width: 10%;
+}
+.TextFlex2 {
+	font-size: 17px;
+	width: auto;
+	margin: 0px 100px 0px 0px;
+	display: flex;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 100;
+}
+.rightDiv {
+	margin: 250px 100px 0px 100px;
+}
+
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5); /* Transparante achtergrond */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 10; /* Zorg ervoor dat de overlay bovenop de parallax staat */
+}
+
+.new-screen {
+	background: white;
+	padding: 20px;
+	border-radius: 8px;
+	text-align: center;
+}
+
+.new-screen button {
+	margin-top: 20px; /* Voeg wat ruimte toe tussen de inhoud en de knop */
 }
