--- a/Dynamic/src/App.css
+++ b/Dynamic/src/App.css
@@ -13,8 +13,9 @@ body {
 	margin-top: -700px;
 }
 .header {
-	margin-left: 20%;
+	margin-left: 10%;
 	margin-top: 400px;
+	font-size: 40px;
 }
 .textFlex {
 	font-size: 17px;
@@ -31,10 +32,6 @@ body {
 h2.right {
 	margin-top: 300px;
 }
-/* .parallax {
-	margin-top: 60%;
-	position: relative;
-} */
 
 .img {
 	width: 10%;
@@ -65,12 +62,87 @@ h2.right {
 }
 
 .new-screen {
-	background: white;
-	padding: 20px;
-	border-radius: 8px;
-	text-align: center;
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
-.new-screen button {
-	margin-top: 20px; /* Voeg wat ruimte toe tussen de inhoud en de knop */
+.new-screen img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.new-screen div {
+	position: relative;
+	z-index: 1;
+	color: white;
+}
+.button {
+	color: white;
+	border: 0;
+	background-color: rgb(0, 0, 0);
+	font-size: 30px;
+}
+button {
+	display: flex;
+}
+.animatedTitle {
+	position: relative;
+	color: black;
+	font-size: 50px;
+	-webkit-text-stroke: 0.5px rgb(106, 106, 250);
+	text-transform: uppercase;
+}
+.animatedTitle::before {
+	content: attr(data-text);
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20%;
+	height: 100%;
+	color: rgb(106, 106, 250);
+	-webkit-text-stroke: 0px rgb(106, 106, 250);
+	border-right: 2px solid rgb(106, 106, 250);
+	overflow: hidden;
+	animation: animate 6s linear infinite;
+}
+@keyframes animate {
+	0%,
+	10%,
+	100% {
+		width: 0;
+	}
+	70%,
+	90% {
+		width: 100%;
+	}
+}
+
+.textFlex1 {
+	font-family: Arial, Helvetica, sans-serif;
+	width: auto;
+	margin: 0px 100px;
+	display: flex;
+	font-family: Arial, Helvetica, sans-serif;
+	flex-direction: column;
+	align-items: center;
+}
+.textFlex1 h2 {
+	font-size: 20px;
+}
+.TextPicture {
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: center;
+	margin-top: 100px;
+}
+
+.TextPicture img {
+	width: 40%;
+	margin: 0px 50px;
 }
