--- a/Dynamic/src/App.css
+++ b/Dynamic/src/App.css
@@ -12,6 +12,13 @@ body {
 	margin-left: 50%;
 	margin-top: -700px;
 }
+.imageRaket {
+	margin-top: 30%;
+	width: 80%;
+	margin-left: 20%;
+	transform: translateY(-50%);
+}
+
 .header {
 	margin-left: 10%;
 	margin-top: 400px;
@@ -34,7 +41,7 @@ h2.right {
 }
 
 .img {
-	width: 10%;
+	width: 60%;
 }
 .TextFlex2 {
 	font-size: 17px;
@@ -54,11 +61,11 @@ h2.right {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5); /* Transparante achtergrond */
+	background-color: rgba(0, 0, 0, 0.5);
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	z-index: 10; /* Zorg ervoor dat de overlay bovenop de parallax staat */
+	z-index: 10;
 }
 
 .new-screen {
@@ -97,6 +104,7 @@ button {
 	font-size: 50px;
 	-webkit-text-stroke: 0.5px rgb(106, 106, 250);
 	text-transform: uppercase;
+	margin-left: 200px;
 }
 .animatedTitle::before {
 	content: attr(data-text);
@@ -140,9 +148,22 @@ button {
 	flex-direction: row-reverse;
 	align-items: center;
 	margin-top: 100px;
+	margin: 0px 200px;
 }
 
 .TextPicture img {
-	width: 40%;
-	margin: 0px 50px;
+	width: 45%;
+	margin-right: 100px;
+}
+.TextPicture1 {
+	display: flex;
+	margin: 50px 200px;
+	width: auto;
+}
+.TextPicture1 h2 {
+	flex: 1;
+	margin: 0px;
+}
+.TextPicture1 h2:nth-of-type(1) {
+	margin-right: 50px;
 }
