--- a/Dynamic/src/App.css
+++ b/Dynamic/src/App.css
@@ -7,6 +7,10 @@ body {
 	width: 100%;
 	height: 100%;
 }
+h3 {
+	font-weight: 100;
+	font-size: 20px;
+}
 .image {
 	width: 800px;
 	margin-left: 50%;
@@ -72,7 +76,8 @@ h2.right {
 	position: relative;
 	width: 100%;
 	height: 100vh;
-	background-color: rgba(0, 0, 0, 0.5);
+	background-color: rgb(0, 0, 0);
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .new-screen img {
@@ -83,28 +88,38 @@ h2.right {
 	top: 0;
 	left: 0;
 }
-
+.newScreenDiv {
+	display: flex;
+}
+.new-screen h2 {
+	font-size: 50px;
+}
 .new-screen div {
 	position: relative;
 	z-index: 1;
 	color: white;
 }
+.new-screen h3 {
+	text-align: left;
+	margin: 0px 90px;
+}
 .button {
-	color: white;
+	color: black;
 	border: 0;
-	background-color: rgb(0, 0, 0);
+	background-color: rgb(106, 106, 250);
 	font-size: 30px;
 }
-button {
-	display: flex;
-}
+
 .animatedTitle {
 	position: relative;
 	color: black;
 	font-size: 50px;
 	-webkit-text-stroke: 0.5px rgb(106, 106, 250);
 	text-transform: uppercase;
-	margin-left: 200px;
+}
+.animatieText {
+	display: flex;
+	justify-content: center;
 }
 .animatedTitle::before {
 	content: attr(data-text);
@@ -117,6 +132,7 @@ button {
 	-webkit-text-stroke: 0px rgb(106, 106, 250);
 	border-right: 2px solid rgb(106, 106, 250);
 	overflow: hidden;
+
 	animation: animate 6s linear infinite;
 }
 @keyframes animate {
@@ -153,7 +169,7 @@ button {
 
 .TextPicture img {
 	width: 45%;
-	margin-right: 100px;
+	margin-right: 80px;
 }
 .TextPicture1 {
 	display: flex;
