--- a/Dynamic/src/App.css
+++ b/Dynamic/src/App.css
@@ -236,19 +236,25 @@ h2.right {
 .earthPng img {
 	width: 30%;
 	margin-left: 60%;
+	margin-top: 15%;
 }
 .IssPng img {
 	width: 20%;
 	margin-left: 40%;
+	margin-top: 90px;
 }
 .End {
 	background-image: url(../src/assets/starsBackground.jpg);
 	width: 100%;
 	height: 180%;
 	margin-top: -20%;
-	display: flex; /* Voegt flexbox toe om centreren mogelijk te maken */
-	justify-content: center; /* Center horizontaal */
-	align-items: center; /* Center verticaal */
-	color: white; /* Tekstkleur */
-	text-align: center; /* Center tekst */
+	display: flex;
+	align-items: center;
+	color: white;
+	text-align: center;
+}
+.EndText h1 {
+	font-size: 50px;
+	font-family: Arial, Helvetica, sans-serif;
+	margin-left: 200px;
 }
