--- a/Dynamic/src/App.css
+++ b/Dynamic/src/App.css
@@ -244,7 +244,7 @@ h2.right {
 	margin-top: 90px;
 }
 .End {
-	background-image: url(../src/assets/starsBackground.jpg);
+	background-image: url(../src/assets/starsBackground-copy.png);
 	width: 100%;
 	height: 180%;
 	margin-top: -20%;
